[package]
name = "construct-ice"
version = "0.2.2"
edition = "2024"
description = "ICE (Intrusion Countermeasures Electronics) — traffic obfuscation transport for Construct messenger"
license = "MIT"
repository = "https://github.com/maximeliseyev/construct-ice"
keywords = ["obfs4", "pluggable-transport", "censorship-resistance", "tor"]

[lib]
name = "construct_ice"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

# Integration test binary (against Go reference server)
[[example]]
name = "interop_server"
path = "examples/interop_server.rs"

[[example]]
name = "interop_client"
path = "examples/interop_client.rs"

[[bench]]
name = "framing"
harness = false

[dependencies]
# Crypto
curve25519-elligator2 = { version = "0.1.0-alpha.2", features = ["elligator2", "rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
siphasher = "1"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand_chacha = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
crypto_secretbox = "0.1"
base64 = "0.22"

# Async I/O
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
bytes = "1.6"
pin-project-lite = "0.2"

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
hex = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
# Enable C FFI proxy (ice_proxy_start/stop/is_running) — required for iOS
ffi = []
# Enable TLS wrapping (outer TLS before obfs4) — required for DPI evasion
# Uses the platform native TLS stack (SecureTransport on Apple, SChannel on Windows)
tls = ["dep:native-tls", "dep:tokio-native-tls"]
# ffi + tls combined (used by iOS build)
ffi-tls = ["ffi", "tls"]
# Enable tonic/hyper transport wrappers (optional — pulls in heavy deps)
tonic-transport = ["dep:hyper", "dep:http"]

[dependencies.hyper]
version = "1"
features = ["client", "server"]
optional = true

[dependencies.http]
version = "1"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true
