[package]
name = "construct-ice"
version = "2.2.0"
edition = "2024"
description = "ICE (Intrusion Countermeasures Electronics) — traffic obfuscation transport for Construct messenger"
license = "MIT"
repository = "https://github.com/maximeliseyev/construct-ice"
keywords = ["web-tunnel", "pluggable-transport", "censorship-resistance", "tor"]

[lib]
name = "construct_ice"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

# Integration test binary (against Go reference server)
[[example]]
name = "interop_server"
path = "examples/interop_server.rs"

[[example]]
name = "interop_client"
path = "examples/interop_client.rs"

[[example]]
name = "grpc_obfs4_client"
path = "examples/grpc_obfs4_client.rs"
required-features = ["tonic-transport"]

[dependencies]
# Crypto
curve25519-elligator2 = { version = "0.1.0-alpha.2", features = ["elligator2", "rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
siphasher = "1"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand_chacha = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
crypto_secretbox = "0.1"
base64 = "0.22"

# Async I/O
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
bytes = "1.6"
pin-project-lite = "0.2"

# Error handling
thiserror = "1"
tonic = { version = "0.14.5", optional = true }

[dependencies.prometheus]
version = "0.13"
optional = true

[dependencies.once_cell]
version = "1"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
hex = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
# Enable C FFI proxy (ice_proxy_start/stop/is_running) — required for iOS
ffi = []
# Enable TLS wrapping (outer TLS before obfs4) — required for DPI evasion.
# Uses rustls with a custom SPKI-pinning verifier for full SNI and cert control.
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pki-types", "dep:x509-cert"]
# uTLS browser fingerprint mimicry (Chrome 131, Firefox 128, Safari 18 profiles).
# Implies tls. Adds md-5 for JA3 hash computation.
utls = ["tls", "dep:md-5"]
# ffi + tls combined (used by iOS build)
ffi-tls = ["ffi", "tls"]
# WebTunnel transport — WebSocket (RFC 6455) over TLS.
# Disguises traffic as wss:// connections; stronger DPI resistance than obfs4.
# Requires tls. The relay server must support WebSocket proxy mode.
webtunnel = ["tls"]
# ffi + webtunnel combined (used by iOS build for WebTunnel transport)
ffi-webtunnel = ["ffi", "webtunnel"]
# Enable Prometheus metrics + HTTP /metrics endpoint (for relay nodes)
metrics = ["dep:prometheus", "dep:once_cell", "dep:tracing"]
# Implies webtunnel. Adds sha1 for Sec-WebSocket-Accept computation (RFC 6455 §4.2.2).
server = ["webtunnel", "dep:sha1"]
# Enable tonic/hyper transport wrappers (optional — pulls in heavy deps)
# Includes tower::Service<Uri> connector + full tonic::transport::Channel API.
tonic-transport = ["dep:hyper", "dep:http", "dep:tower", "dep:tonic"]

[dependencies.hyper]
version = "1"
features = ["client", "server"]
optional = true

[dependencies.http]
version = "1"
optional = true

[dependencies.tower]
version = "0.5"
features = ["util"]
optional = true

[dependencies.rustls]
version = "0.23"
features = ["ring"]
optional = true

[dependencies.tokio-rustls]
version = "0.26"
optional = true

[dependencies.rustls-pki-types]
version = "1"
optional = true

[dependencies.x509-cert]
version = "0.2"
default-features = false
features = ["std"]
optional = true

[dependencies.md-5]
version = "0.10"
optional = true

[dependencies.sha1]
version = "0.10"
optional = true

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true
