[package]
name = "construct-ice-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
curve25519-elligator2 = { version = "0.1.0-alpha.2", features = ["elligator2"] }

[dependencies.construct-ice]
path = ".."

[workspace]
members = ["."]

# ── Fuzz targets ──────────────────────────────────────────────────────────────

[[bin]]
name = "fuzz_frame_decoder"
path = "fuzz_targets/fuzz_frame_decoder.rs"
doc = false

[[bin]]
name = "fuzz_cover_classify"
path = "fuzz_targets/fuzz_cover_classify.rs"
doc = false

[[bin]]
name = "fuzz_length_obfuscator"
path = "fuzz_targets/fuzz_length_obfuscator.rs"
doc = false

[[bin]]
name = "fuzz_replay_filter"
path = "fuzz_targets/fuzz_replay_filter.rs"
doc = false

[[bin]]
name = "fuzz_elligator2"
path = "fuzz_targets/fuzz_elligator2.rs"
doc = false

[[bin]]
name = "fuzz_bridge_cert"
path = "fuzz_targets/fuzz_bridge_cert.rs"
doc = false

[[bin]]
name = "fuzz_handshake_scan"
path = "fuzz_targets/fuzz_handshake_scan.rs"
doc = false

[profile.release]
opt-level = 3
debug = true
